[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
jsonwebtoken = "9.1.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
warp = "0.3.6"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = "abort"
